<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hachiko.hachiko.login.OTPActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verifyotpbtn"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/otpedittext"
        android:layout_marginTop="15dp"
        android:visibility="gone"/>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_back_arrow"
                android:background="@null"
                android:id="@+id/backButton"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:paddingStart="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifying_your_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/otpSentToNumber"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_sent_to_number"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/otpSentToNumber"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        android:id="@+id/otpedittext"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="25dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait_for_otp"
            android:textColor="@color/colorPrimary"
            android:layout_toLeftOf="@+id/timer" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            android:id="@+id/timer"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/loginBtn">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textColor="@color/white"
                android:id="@+id/resendOTP"
                android:layout_centerInParent="true"
                android:textSize="16sp"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</LinearLayout>
