<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hachiko.hachiko.MainActivity"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_background_corner"
        android:text="@string/otp_login"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_background_corner"
        android:text="@string/gmail_login"
        android:layout_below="@+id/otpLoginBtn"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_background_corner"
        android:text="@string/guest_login"
        android:layout_below="@+id/googleLoginBtn"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/otpLoginBtn"
        android:layout_above="@+id/googleLoginBtn"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_login"
                android:textColor="@color/white"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/googleLoginBtn"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gmail_login"
                android:textColor="@color/white"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/guestLoginBtn"
        android:layout_below="@+id/googleLoginBtn"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest_login"
                android:textColor="@color/white"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="link account"
        android:id="@+id/linkAcct"/>

</RelativeLayout>
